refactoring UserServiceImplTest